--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -105,13 +105,26 @@ jobs:
         run: ctest --preset=${{ matrix.build-type }} --output-on-failure
 
   windows:
-    if: false
-    name: Windows • clang-cl • ${{ matrix.build-type }}
+    name: Windows • ${{ matrix.compiler }} • ${{ matrix.build-type }}
     runs-on: windows-2022
     strategy:
       fail-fast: false
       matrix:
-        build-type: ["debug", "release"]
+        include:
+          - compiler: clang-cl
+            build-type: debug
+            uses_llvm: true
+            llvm_version: "21.1.4"
+          - compiler: clang-cl
+            build-type: release
+            uses_llvm: true
+            llvm_version: "21.1.4"
+          - compiler: msvc
+            build-type: debug
+            uses_llvm: false
+          - compiler: msvc
+            build-type: release
+            uses_llvm: false
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -119,32 +132,50 @@ jobs:
       - name: Setup Ninja
         uses: seanmiddleditch/gha-setup-ninja@v3
 
-      - name: Download LLVM distribution (tarball)
-        shell: pwsh
-        run: |
-          $version = "21.1.3"
-          $archive = "clang+llvm-$version-x86_64-pc-windows-msvc.tar.xz"
-          $url = "https://github.com/llvm/llvm-project/releases/download/llvmorg-$version/$archive"
-          Invoke-WebRequest -Uri $url -OutFile $archive
+      - name: Setup MSVC environment
+        uses: ilammy/msvc-dev-cmd@v1
+        with:
+          arch: x64
 
-      - name: Extract LLVM toolchain
+      - name: Install LLVM toolchain (Chocolatey)
+        if: ${{ matrix.uses_llvm }}
         shell: pwsh
         run: |
-          $archive = Get-Item clang+llvm-*-x86_64-pc-windows-msvc.tar.xz
-          tar -xf $archive.FullName
-          $extracted = Get-ChildItem -Directory | Where-Object { $_.Name -like "clang+llvm-*-x86_64-pc-windows-msvc" } | Select-Object -First 1
-          if (-not $extracted) { throw "Failed to locate extracted LLVM directory." }
-          "$($extracted.FullName)\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-          "LLVM_BIN=$($extracted.FullName)\bin" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          "LLVM_DIR=$($extracted.FullName)\lib\cmake\llvm" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          $version = "${{ matrix.llvm_version }}"
+          choco install llvm --version=$version -y --no-progress
+
+      - name: Configure LLVM environment
+        if: ${{ matrix.uses_llvm }}
+        shell: pwsh
+        run: |
+          $llvmRoot = Join-Path $Env:ProgramFiles "LLVM"
+          if (-not (Test-Path $llvmRoot)) {
+            throw "LLVM installation not found at $llvmRoot"
+          }
+          "$llvmRoot\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          "LLVM_BIN=$llvmRoot\bin" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          "LLVM_DIR=$llvmRoot\lib\cmake\llvm" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+
+      - name: Inspect LLVM installation
+        if: ${{ matrix.uses_llvm }}
+        shell: pwsh
+        run: |
+          Write-Host "LLVM bin contents:"
+          Get-ChildItem -LiteralPath "$env:LLVM_BIN" | Select-Object Mode,Length,Name
+          Write-Host "`nLLVM cmake packages:"
+          Get-ChildItem -LiteralPath "$Env:ProgramFiles\LLVM\lib\cmake" -Depth 1 | Select-Object Mode,Name
 
       - name: Show tool versions
         shell: pwsh
         run: |
           cmake --version
           ninja --version
-          "$env:LLVM_BIN\clang-cl.exe" --version
-          clang-cl --version
+          if ("${{ matrix.compiler }}" -eq "clang-cl") {
+            & "$env:LLVM_BIN\clang-cl.exe" --version
+            clang-cl --version
+          } else {
+            cl.exe
+          }
 
       - name: Setup vcpkg
         shell: pwsh
@@ -152,7 +183,17 @@ jobs:
 
       - name: Configure
         shell: pwsh
-        run: cmake --preset=${{ matrix.build-type }} -DCMAKE_C_COMPILER=clang-cl -DCMAKE_CXX_COMPILER=clang-cl -DLLVM_DIR="$env:LLVM_DIR"
+        run: |
+          if ("${{ matrix.compiler }}" -eq "clang-cl") {
+            cmake --preset=${{ matrix.build-type }} `
+              -DCMAKE_C_COMPILER=clang-cl `
+              -DCMAKE_CXX_COMPILER=clang-cl `
+              -DLLVM_DIR="$env:LLVM_DIR"
+          } else {
+            cmake --preset=${{ matrix.build-type }} `
+              -DCMAKE_C_COMPILER=cl.exe `
+              -DCMAKE_CXX_COMPILER=cl.exe
+          }
 
       - name: Build
         shell: pwsh
