- Compute Clang’s resource dir from your LLVM install and inject it for codegen:
  - tools/CMakeLists.txt: finds GENTEST_CLANG_RESOURCE_DIR under <LLVM_PREFIX>/lib/clang/*/include.
  - cmake/GentestCodegen.cmake: on Windows, passes -resource-dir "${GENTEST_CLANG_RESOURCE_DIR}" to the generator’s Clang invocation.
- Added simple diagnostics and an escape hatch to narrow remaining issues:
  - tools/src/main.cpp: prints “discovered N test case(s), M mock target(s)” and final emit status.
  - tools/src/main.cpp: honors GENTEST_NO_MOCK_DISCOVERY=1 to disable the mock scanning pass (handy to isolate crashes).

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -176,6 +176,21 @@ if(DEFINED _gentest_llvm_prefix)
 endif()
 list(REMOVE_DUPLICATES _gentest_llvm_libdirs)
 
+# Try to find Clang resource directory (builtin headers) under the LLVM prefix
+if(DEFINED _gentest_llvm_prefix)
+    file(GLOB _gentest_resdir_candidates
+        LIST_DIRECTORIES TRUE
+        "${_gentest_llvm_prefix}/lib/clang/*")
+    list(SORT _gentest_resdir_candidates COMPARE NATURAL ORDER DESCENDING)
+    foreach(_cand IN LISTS _gentest_resdir_candidates)
+        if(EXISTS "${_cand}/include")
+            set(GENTEST_CLANG_RESOURCE_DIR "${_cand}" CACHE INTERNAL "Clang resource directory" FORCE)
+            break()
+        endif()
+    endforeach()
+    unset(_gentest_resdir_candidates)
+endif()
+
 set(_gentest_llvm_dso)
 foreach(_dir IN LISTS _gentest_llvm_libdirs)
     if(EXISTS "${_dir}")
