Improve dependency manifests and Conan/vcpkg presets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,17 @@ add_subdirectory(src)
 option(${PROJECT_NAME}_BUILD_TESTING "Build the testing tree" ON)
 option(GENTEST_USE_BOOST_JSON "Use Boost.JSON for Allure writer in generated runtime" OFF)
 option(GENTEST_USE_BOOST_UUID "Use Boost.UUID for UUID generation in generated runtime" OFF)
+
+set(_gentest_boost_components "")
+if(GENTEST_USE_BOOST_JSON)
+    list(APPEND _gentest_boost_components json)
+endif()
+if(GENTEST_USE_BOOST_UUID)
+    list(APPEND _gentest_boost_components uuid)
+endif()
+if(_gentest_boost_components)
+    find_package(Boost CONFIG REQUIRED COMPONENTS ${_gentest_boost_components})
+endif()
 if(${PROJECT_NAME}_BUILD_TESTING)
     include(CTest)
     enable_testing()
