Improve benchmark failure reporting and coverage

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -216,13 +216,13 @@ add_test(NAME skiponly_list_counts
 add_test(NAME fixtures_counts
     COMMAND ${CMAKE_COMMAND}
         -DPROG=$<TARGET_FILE:gentest_fixtures_tests>
-        -DPASS=5 -DFAIL=0 -DSKIP=0
+        -DPASS=7 -DFAIL=0 -DSKIP=0
         -P ${PROJECT_SOURCE_DIR}/cmake/CheckTestCounts.cmake)
 
 add_test(NAME fixtures_list_counts
     COMMAND ${CMAKE_COMMAND}
         -DPROG=$<TARGET_FILE:gentest_fixtures_tests>
-        -DLIST=ON -DCASES=5
+        -DLIST=ON -DCASES=7
         -P ${PROJECT_SOURCE_DIR}/cmake/CheckTestCounts.cmake)
 
 add_test(NAME templates_counts
@@ -392,7 +392,7 @@ add_test(NAME filter_single
 add_test(NAME fixtures_list_tests_lines
     COMMAND ${CMAKE_COMMAND}
         -DPROG=$<TARGET_FILE:gentest_fixtures_tests>
-        -DLINES=5
+        -DLINES=7
         -DARGS=--list-tests
         -P ${PROJECT_SOURCE_DIR}/cmake/CheckLines.cmake)
 
@@ -522,13 +522,10 @@ add_test(NAME benches_table_smoke
 
 add_test(NAME bench_failure_nonzero
     COMMAND $<TARGET_FILE:gentest_benchmarks_tests> --run-bench=benchmarks/string/failing)
-set_tests_properties(bench_failure_nonzero PROPERTIES WILL_FAIL TRUE)
+set_tests_properties(bench_failure_nonzero PROPERTIES WILL_FAIL TRUE ENVIRONMENT GENTEST_ENABLE_FAILING_BENCH=1)
 
-# The full benchmarks suite contains a deliberately failing benchmark; skip the
-# default "benchmarks" test and run a passing bench for smoke coverage instead.
-set_tests_properties(benchmarks PROPERTIES DISABLED TRUE)
 add_test(NAME benchmarks_smoke
-    COMMAND $<TARGET_FILE:gentest_benchmarks_tests> --run-bench=benchmarks/string/concat_small)
+    COMMAND $<TARGET_FILE:gentest_benchmarks_tests> --bench-filter=benchmarks/*)
 
 # Jitter: histogram header and suite table header
 add_test(NAME jitter_hist_header
