build: avoid terminfo shim and fix RTTI flags on Windows
- Only enable the Terminfo compatibility shim on Unix platforms; on Windows keep a no-op Terminfo::terminfo target for LLVM exports without trying to build libtinfo.\n- Use /GR- instead of -fno-rtti when building gentest_codegen with MSVC/clang-cl.

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -97,7 +97,11 @@ if(NOT TARGET Terminfo::terminfo)
         endif()
     endif()
     if(NOT GENTEST_USE_SYSTEM_TERMINFO)
-        set(_gentest_use_local_tinfo_shim TRUE)
+        # Terminfo/libtinfo is a Unix concern. On Windows, LLVM/Clang builds do not
+        # depend on it and we should not attempt to build the compatibility shim.
+        if(UNIX)
+            set(_gentest_use_local_tinfo_shim TRUE)
+        endif()
     elseif(_gentest_terminfo_links STREQUAL "" AND UNIX)
         set(_gentest_use_local_tinfo_shim TRUE)
     endif()
@@ -112,7 +116,7 @@ if(NOT TARGET Terminfo::terminfo)
         set(_gentest_use_local_tinfo_shim FALSE)
     endif()
 
-    if(_gentest_use_local_tinfo_shim)
+    if(_gentest_use_local_tinfo_shim AND UNIX)
         add_library(gentest_tinfo_shim SHARED src/terminfo_shim.cpp)
         target_link_libraries(gentest_tinfo_shim PRIVATE dl)
         set_target_properties(gentest_tinfo_shim PROPERTIES
@@ -280,7 +284,12 @@ endif()
 if(LLVM_ENABLE_RTTI)
     target_compile_definitions(gentest_codegen PRIVATE LLVM_ENABLE_RTTI)
 else()
-    target_compile_options(gentest_codegen PRIVATE -fno-rtti)
+    if(MSVC)
+        # MSVC/clang-cl frontend
+        target_compile_options(gentest_codegen PRIVATE /GR-)
+    else()
+        target_compile_options(gentest_codegen PRIVATE -fno-rtti)
+    endif()
 endif()
 
 llvm_map_components_to_libnames(_gentest_llvm_support Support)
