--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -105,13 +105,13 @@ jobs:
         run: ctest --preset=${{ matrix.build-type }} --output-on-failure
 
   windows:
-    if: false
-    name: Windows • clang-cl • ${{ matrix.build-type }}
+    name: Windows • LLVM ${{ matrix.llvm-version }} • ${{ matrix.preset }}
     runs-on: windows-2022
     strategy:
       fail-fast: false
       matrix:
-        build-type: ["debug", "release"]
+        llvm-version: ["21.1.4", "20.1.8"]
+        preset: ["debug-system", "release-system"]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -122,7 +122,7 @@ jobs:
       - name: Download LLVM distribution (tarball)
         shell: pwsh
         run: |
-          $version = "21.1.3"
+          $version = "${{ matrix.llvm-version }}"
           $archive = "clang+llvm-$version-x86_64-pc-windows-msvc.tar.xz"
           $url = "https://github.com/llvm/llvm-project/releases/download/llvmorg-$version/$archive"
           Invoke-WebRequest -Uri $url -OutFile $archive
@@ -137,30 +137,27 @@ jobs:
           "$($extracted.FullName)\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
           "LLVM_BIN=$($extracted.FullName)\bin" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           "LLVM_DIR=$($extracted.FullName)\lib\cmake\llvm" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          "Clang_DIR=$($extracted.FullName)\lib\cmake\clang" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
       - name: Show tool versions
         shell: pwsh
         run: |
           cmake --version
           ninja --version
-          "$env:LLVM_BIN\clang-cl.exe" --version
-          clang-cl --version
-
-      - name: Setup vcpkg
-        shell: pwsh
-        run: bash scripts/setup-vcpkg.sh
+          "$env:LLVM_BIN\clang.exe" --version
+          "$env:LLVM_BIN\clang++.exe" --version
 
       - name: Configure
         shell: pwsh
-        run: cmake --preset=${{ matrix.build-type }} -DCMAKE_C_COMPILER=clang-cl -DCMAKE_CXX_COMPILER=clang-cl -DLLVM_DIR="$env:LLVM_DIR"
+        run: cmake --preset=${{ matrix.preset }} -DCMAKE_C_COMPILER="$env:LLVM_BIN\\clang.exe" -DCMAKE_CXX_COMPILER="$env:LLVM_BIN\\clang++.exe" -DLLVM_DIR="$env:LLVM_DIR" -DClang_DIR="$env:Clang_DIR"
 
       - name: Build
         shell: pwsh
-        run: cmake --build --preset=${{ matrix.build-type }}
+        run: cmake --build --preset=${{ matrix.preset }}
 
       - name: Test
         shell: pwsh
-        run: ctest --preset=${{ matrix.build-type }} --output-on-failure
+        run: ctest --preset=${{ matrix.preset }} --output-on-failure
 
   linux:
     name: ${{ matrix.name }} • ${{ matrix.build_type }}
